<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddItem">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/target_imageView_add"
                android:layout_width="100dp"
                android:layout_gravity="center"
                android:layout_height="100dp" />

            <Button
                android:id="@+id/addImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/add_image"
                android:maxLength="50" />


        </LinearLayout>

        <EditText
            android:id="@+id/product_name"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:hint="@string/product_name"
            android:maxLength="50"
            android:paddingLeft="10dp" />

        <EditText
            android:id="@+id/quantity"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/quantity"
            android:maxLength="50"
            android:paddingLeft="10dp" />

        <EditText
            android:id="@+id/price"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/price"
            android:maxLength="50"
            android:paddingLeft="10dp" />

        <Button
            android:id="@+id/save_product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            android:hint="@string/save"
            android:maxLength="50" />
    </LinearLayout>
</ScrollView>
